crates/aranya-policy-compiler/tests/data/scoping/map_inner_var_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
6 |     check n == 42 // should not be accessible outside the block
  |           ^ 'n' not in scope
